# amberol

./: .gitignore  Cargo.toml  README-Windows-Static.md  README-Windows.md  README.md  amberol-installer.iss  amberol.bat  build.rs  build_cargo.py  build_cross_platform.py  build_local.bat  build_true_static.sh  build_windows.ps1  build_windows_static.ps1  check_missing_dlls.ps1  convert_icons_to_png.ps1  create_png_icons.py  debug_icons.ps1  debug_icons_enhanced.ps1  icon.rc  meson.build  test_build  test_programmatic_icons.ps1
.cargo/: config.toml
.github/workflows/: automation.yml  ci.yml  dependencies.yml  docs.yml  nightly.yml  release.yml
po/: be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  is.po  it.po  ka.po  ko.po  lt.po  my.po  nb.po  ne.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  (+2 more)
src/: amberol.gresource.xml  application.rs  cover_picture.rs  desktop_integration.rs  drag_overlay.rs  icon_hijacker.rs  icon_renderer.rs  icon_replacer.rs  icon_theme_provider.rs  main.rs  meson.build  playback_control.rs  queue_row.rs  system_tray.rs  utils.rs  volume_control.rs  window.rs  windows.rs
src/audio/: cover_cache.rs  gst_backend.rs  mpris_controller.rs  player.rs  shuffle.rs  song.rs  state.rs  waveform_generator.rs
