# SPDX-FileCopyrightText: 2022  Emmanuele Bassi
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "amberol"
authors = ["Emmanuele Bassi <ebassi@gnome.org>"]
version = "0.1.0"
edition = "2018"

[dependencies]
color-thief = "0.2.1"
gdk-pixbuf = { version = "0.20", features = ["v2_42"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_14"] }
glib = "0.10"
lofty = "0.21.0"
log = "0.4"
once_cell = "1.10"
pretty_env_logger = "0.5"
rand = "0.8.5"
regex = "1.3.4"
serde_json = "1.0"
sha2 = "0.10.2"
fuzzy-matcher = "0.3.7"
async-channel = "2.2.0"
futures = "0.3"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
ashpd = {version = "0.9.1", features = ["gtk4"]}
mpris-server = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "minwindef", "fileapi", "psapi"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_Media_Audio",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_5"]

[dependencies.gst]
package = "gstreamer"
version = "0.23"

[dependencies.gst-audio]
package = "gstreamer-audio"
version = "0.23"

[dependencies.gst-player]
package = "gstreamer-player"
version = "0.23"

# Windows-specific optimizations (not for static linking)
[profile.release]
lto = true
codegen-units = 1

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.4"
